@@ -17,7 +17,6 @@
 package org.springframework.boot.actuate.autoconfigure.endpoint;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.boot.actuate.endpoint.annotation.Endpoint;
@@ -30,7 +29,6 @@ import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnMissingBean;
 import org.springframework.boot.convert.ApplicationConversionService;
 import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.ImportRuntimeHints;
 import org.springframework.core.convert.ConversionService;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.core.convert.converter.GenericConverter;
@@ -46,7 +44,6 @@ import org.springframework.core.env.Environment;
  * @since 2.0.0
  */
 @AutoConfiguration
-@ImportRuntimeHints(ActuatorAnnotationsRuntimeHints.class)
 public class EndpointAutoConfiguration {
 
 	@Bean
@@ -54,9 +51,8 @@ public class EndpointAutoConfiguration {
 	public ParameterValueMapper endpointOperationParameterMapper(
 			@EndpointConverter ObjectProvider<Converter<?, ?>> converters,
 			@EndpointConverter ObjectProvider<GenericConverter> genericConverters) {
-		ConversionService conversionService = createConversionService(
-				converters.orderedStream().collect(Collectors.toList()),
-				genericConverters.orderedStream().collect(Collectors.toList()));
+		ConversionService conversionService = createConversionService(converters.orderedStream().toList(),
+				genericConverters.orderedStream().toList());
 		return new ConversionServiceParameterValueMapper(conversionService);
 	}
 
