@@ -19,6 +19,7 @@ package org.springframework.boot.actuate.autoconfigure.tracing.zipkin;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.UncheckedIOException;
+import java.util.Collections;
 import java.util.List;
 import java.util.zip.GZIPOutputStream;
 
@@ -41,7 +42,7 @@ import org.springframework.util.unit.DataSize;
  */
 abstract class HttpSender extends Sender {
 
-	private static final DataSize MESSAGE_MAX_BYTES = DataSize.ofKilobytes(512);
+	private static final DataSize MESSAGE_MAX_SIZE = DataSize.ofKilobytes(512);
 
 	private volatile boolean closed;
 
@@ -52,7 +53,7 @@ abstract class HttpSender extends Sender {
 
 	@Override
 	public int messageMaxBytes() {
-		return (int) MESSAGE_MAX_BYTES.toBytes();
+		return (int) MESSAGE_MAX_SIZE.toBytes();
 	}
 
 	@Override
@@ -68,7 +69,7 @@ abstract class HttpSender extends Sender {
 	@Override
 	public CheckResult check() {
 		try {
-			sendSpans(List.of()).execute();
+			sendSpans(Collections.emptyList()).execute();
 			return CheckResult.OK;
 		}
 		catch (IOException | RuntimeException ex) {
