@@ -18,6 +18,7 @@ package org.springframework.boot.autoconfigure.web;
 
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.util.Collections;
 import java.util.List;
 import java.util.function.Consumer;
 
@@ -40,23 +41,23 @@ class WebResourcesRuntimeHintsTests {
 	void registerHintsWithAllLocations() {
 		RuntimeHints hints = register(
 				new TestClassLoader(List.of("META-INF/resources/", "resources/", "static/", "public/")));
-		assertThat(hints.resources().resourcePatterns()).singleElement()
+		assertThat(hints.resources().resourcePatternHints()).singleElement()
 				.satisfies(include("META-INF/resources/*", "resources/*", "static/*", "public/*"));
 	}
 
 	@Test
 	void registerHintsWithOnlyStaticLocations() {
 		RuntimeHints hints = register(new TestClassLoader(List.of("static/")));
-		assertThat(hints.resources().resourcePatterns()).singleElement().satisfies(include("static/*"));
+		assertThat(hints.resources().resourcePatternHints()).singleElement().satisfies(include("static/*"));
 	}
 
 	@Test
 	void registerHintsWithNoLocation() {
-		RuntimeHints hints = register(new TestClassLoader(List.of()));
-		assertThat(hints.resources().resourcePatterns()).isEmpty();
+		RuntimeHints hints = register(new TestClassLoader(Collections.emptyList()));
+		assertThat(hints.resources().resourcePatternHints()).isEmpty();
 	}
 
-	RuntimeHints register(ClassLoader classLoader) {
+	private RuntimeHints register(ClassLoader classLoader) {
 		RuntimeHints hints = new RuntimeHints();
 		WebResourcesRuntimeHints registrar = new WebResourcesRuntimeHints();
 		registrar.registerHints(hints, classLoader);
@@ -65,7 +66,7 @@ class WebResourcesRuntimeHintsTests {
 
 	private Consumer<ResourcePatternHints> include(String... patterns) {
 		return (hint) -> {
-			assertThat(hint.getIncludes()).map(ResourcePatternHint::getPattern).containsExactly(patterns);
+			assertThat(hint.getIncludes()).map(ResourcePatternHint::getPattern).contains(patterns);
 			assertThat(hint.getExcludes()).isEmpty();
 		};
 	}
