@@ -39,7 +39,6 @@ import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.jar.JarOutputStream;
 import java.util.jar.Manifest;
-import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
 
@@ -70,6 +69,7 @@ import org.junit.jupiter.api.io.TempDir;
 import org.springframework.boot.gradle.junit.GradleProjectBuilder;
 import org.springframework.boot.loader.tools.DefaultLaunchScript;
 import org.springframework.boot.loader.tools.JarModeLibrary;
+import org.springframework.util.FileCopyUtils;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
@@ -451,7 +451,8 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 
 	@Test
 	void jarWhenLayersDisabledShouldNotContainLayersIndex() throws IOException {
-		List<String> entryNames = getEntryNames(createLayeredJar((configuration) -> configuration.setEnabled(false)));
+		List<String> entryNames = getEntryNames(
+				createLayeredJar((configuration) -> configuration.getEnabled().set(false)));
 		assertThat(entryNames).doesNotContain(this.indexPath + "layers.idx");
 	}
 
@@ -483,6 +484,7 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 			expected.add("- \"dependencies\":");
 			expected.add("  - \"" + this.libPath + "first-library.jar\"");
 			expected.add("  - \"" + this.libPath + "first-project-library.jar\"");
+			expected.add("  - \"" + this.libPath + "fourth-library.jar\"");
 			expected.add("  - \"" + this.libPath + "second-library.jar\"");
 			if (!layerToolsJar.contains("SNAPSHOT")) {
 				expected.add("  - \"" + layerToolsJar + "\"");
@@ -518,7 +520,8 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 				dependencies.intoLayer("my-internal-deps", (spec) -> spec.include("com.example:*:*"));
 				dependencies.intoLayer("my-deps");
 			});
-			layered.setLayerOrder("my-deps", "my-internal-deps", "my-snapshot-deps", "resources", "application");
+			layered.getLayerOrder()
+					.set(List.of("my-deps", "my-internal-deps", "my-snapshot-deps", "resources", "application"));
 		});
 		try (JarFile jarFile = new JarFile(jar)) {
 			List<String> entryNames = getEntryNames(jar);
@@ -537,6 +540,7 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 			expected.add("- \"my-internal-deps\":");
 			expected.add("  - \"" + this.libPath + "first-library.jar\"");
 			expected.add("  - \"" + this.libPath + "first-project-library.jar\"");
+			expected.add("  - \"" + this.libPath + "fourth-library.jar\"");
 			expected.add("  - \"" + this.libPath + "second-library.jar\"");
 			expected.add("- \"my-snapshot-deps\":");
 			expected.add("  - \"" + this.libPath + "second-project-library-SNAPSHOT.jar\"");
@@ -565,7 +569,7 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 	@Test
 	void whenArchiveIsLayeredAndIncludeLayerToolsIsFalseThenLayerToolsAreNotAddedToTheJar() throws IOException {
 		List<String> entryNames = getEntryNames(
-				createLayeredJar((configuration) -> configuration.setIncludeLayerTools(false)));
+				createLayeredJar((configuration) -> configuration.getIncludeLayerTools().set(false)));
 		assertThat(entryNames)
 				.doesNotContain(this.indexPath + "layers/dependencies/lib/spring-boot-jarmode-layertools.jar");
 	}
@@ -617,27 +621,43 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 	}
 
 	File createLayeredJar() throws IOException {
-		return createLayeredJar((spec) -> {
+		return createLayeredJar(false);
+	}
+
+	File createLayeredJar(boolean addReachabilityProperties) throws IOException {
+		return createLayeredJar(addReachabilityProperties, (spec) -> {
 		});
 	}
 
 	File createLayeredJar(Action<LayeredSpec> action) throws IOException {
+		return createLayeredJar(false, action);
+	}
+
+	File createLayeredJar(boolean addReachabilityProperties, Action<LayeredSpec> action) throws IOException {
 		applyLayered(action);
-		addContent();
+		addContent(addReachabilityProperties);
 		executeTask();
 		return getTask().getArchiveFile().get().getAsFile();
 	}
 
 	File createPopulatedJar() throws IOException {
-		addContent();
+		return createPopulatedJar(false);
+	}
+
+	File createPopulatedJar(boolean addReachabilityProperties) throws IOException {
+		addContent(addReachabilityProperties);
 		executeTask();
 		return getTask().getArchiveFile().get().getAsFile();
 	}
 
 	abstract void applyLayered(Action<LayeredSpec> action);
 
-	@SuppressWarnings("unchecked")
 	void addContent() throws IOException {
+		addContent(false);
+	}
+
+	@SuppressWarnings("unchecked")
+	void addContent(boolean addReachabilityProperties) throws IOException {
 		this.task.getMainClass().set("com.example.Main");
 		File classesJavaMain = new File(this.temp, "classes/java/main");
 		File applicationClass = new File(classesJavaMain, "com/example/Application.class");
@@ -651,14 +671,20 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 		staticResources.mkdir();
 		File css = new File(staticResources, "test.css");
 		css.createNewFile();
+		if (addReachabilityProperties) {
+			createReachabilityProperties(resourcesMain, "com.example", "first-library", "1.0.0", "true");
+			createReachabilityProperties(resourcesMain, "com.example", "second-library", "1.0.0", "true");
+			createReachabilityProperties(resourcesMain, "com.example", "fourth-library", "1.0.0", "false");
+		}
 		this.task.classpath(classesJavaMain, resourcesMain, jarFile("first-library.jar"), jarFile("second-library.jar"),
-				jarFile("third-library-SNAPSHOT.jar"), jarFile("first-project-library.jar"),
-				jarFile("second-project-library-SNAPSHOT.jar"));
+				jarFile("third-library-SNAPSHOT.jar"), jarFile("fourth-library.jar"),
+				jarFile("first-project-library.jar"), jarFile("second-project-library-SNAPSHOT.jar"));
 		Set<ResolvedArtifact> artifacts = new LinkedHashSet<>();
 		artifacts.add(mockLibraryArtifact("first-library.jar", "com.example", "first-library", "1.0.0"));
 		artifacts.add(mockLibraryArtifact("second-library.jar", "com.example", "second-library", "1.0.0"));
 		artifacts.add(
 				mockLibraryArtifact("third-library-SNAPSHOT.jar", "com.example", "third-library", "1.0.0.SNAPSHOT"));
+		artifacts.add(mockLibraryArtifact("fourth-library.jar", "com.example", "fourth-library", "1.0.0"));
 		artifacts
 				.add(mockProjectArtifact("first-project-library.jar", "com.example", "first-project-library", "1.0.0"));
 		artifacts.add(mockProjectArtifact("second-project-library-SNAPSHOT.jar", "com.example",
@@ -681,6 +707,15 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 		}).given(resolvableDependencies).afterResolve(any(Action.class));
 		given(configuration.getIncoming()).willReturn(resolvableDependencies);
 		populateResolvedDependencies(configuration);
+	}
+
+	protected void createReachabilityProperties(File directory, String groupId, String artifactId, String version,
+			String override) throws IOException {
+		File targetDirectory = new File(directory,
+				"META-INF/native-image/%s/%s/%s".formatted(groupId, artifactId, version));
+		File target = new File(targetDirectory, "reachability-metadata.properties");
+		targetDirectory.mkdirs();
+		FileCopyUtils.copy("override=%s\n".formatted(override).getBytes(StandardCharsets.ISO_8859_1), target);
 	}
 
 	abstract void populateResolvedDependencies(Configuration configuration);
@@ -720,7 +755,7 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 	List<String> entryLines(JarFile jarFile, String entryName) throws IOException {
 		try (BufferedReader reader = new BufferedReader(
 				new InputStreamReader(jarFile.getInputStream(jarFile.getEntry(entryName))))) {
-			return reader.lines().collect(Collectors.toList());
+			return reader.lines().toList();
 		}
 	}
 
