@@ -21,7 +21,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import org.yaml.snakeyaml.DumperOptions;
 import org.yaml.snakeyaml.LoaderOptions;
@@ -73,9 +72,9 @@ class OriginTrackedYamlLoader extends YamlProcessor {
 
 	private Yaml createYaml(LoaderOptions loaderOptions) {
 		BaseConstructor constructor = new OriginTrackingConstructor(loaderOptions);
-		Representer representer = new Representer();
 		DumperOptions dumperOptions = new DumperOptions();
-		LimitedResolver resolver = new LimitedResolver();
+		Representer representer = new Representer(dumperOptions);
+		NoTimestampResolver resolver = new NoTimestampResolver();
 		return new Yaml(constructor, representer, dumperOptions, loaderOptions, resolver);
 	}
 
@@ -120,7 +119,7 @@ class OriginTrackedYamlLoader extends YamlProcessor {
 		}
 
 		private void replaceMappingNodeKeys(MappingNode node) {
-			node.setValue(node.getValue().stream().map(KeyScalarNode::get).collect(Collectors.toList()));
+			node.setValue(node.getValue().stream().map(KeyScalarNode::get).toList());
 		}
 
 		private Object constructTrackedObject(Node node, Object value) {
@@ -167,14 +166,14 @@ class OriginTrackedYamlLoader extends YamlProcessor {
 	/**
 	 * {@link Resolver} that limits {@link Tag#TIMESTAMP} tags.
 	 */
-	private static class LimitedResolver extends Resolver {
+	private static class NoTimestampResolver extends Resolver {
 
 		@Override
-		public void addImplicitResolver(Tag tag, Pattern regexp, String first) {
+		public void addImplicitResolver(Tag tag, Pattern regexp, String first, int limit) {
 			if (tag == Tag.TIMESTAMP) {
 				return;
 			}
-			super.addImplicitResolver(tag, regexp, first);
+			super.addImplicitResolver(tag, regexp, first, limit);
 		}
 
 	}
